<resources>
    <string name="app_name">สารพัดรับจ้าง</string>
    <string name="facebook_app_id">159750594620785</string>
    <string name="fb_login_protocol_scheme">fb159750594620785</string>
    <string name="title_activity_main_home">MainHome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home__toppicp_roblem">Home_Toppicp_roblem</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tital_messanger">Messanger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teb">TebActivity</string>
    <string name="Name"> </string>
    <string name="Phone"> </string>
    <string name="Time"> </string>
    <string name="select">เลือก</string>
    <string name="connect">ติดต่อ</string>
    <string name="title_activity_send_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonConFirm">ยืนยัน</string>
    <string name="title_activity_next_and__back">Next_and_Back</string>
    <string name="nextPage">nextPage</string>
    <string name="back_Page">backPage</string>
    <string name="success">ยืนยัน</string>
</resources>
